--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY="AIzaSyAt6CBqK4ylNMpOJzYc_feW9jj0Hd4XSuk"
+account_sid='ACb604cdff6ba558c3c2b0c563a69a9a02'
+auth_token='fcd5d895f608ed8d9cce2e09311045d4'
